# deepscale

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-pytorch-cu124.txt  setup.py
.github/workflows/: publish.yml
src/deepscale/: __init__.py  distributed.py  parallel.py  scaling.py  utils.py
tests/: __init__.py  test_deepscale.py
