[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepscale"
version = "0.1.0"
description = "A Python library for large-scale deep learning training across thousands of GPUs for LLMs and other massive models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["large-scale training", "distributed training", "LLM training", "multi-GPU", "thousands of GPUs", "massive models", "deep learning scaling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
    "psutil>=5.8.0",
    "rich>=10.0.0",
    "pyyaml>=5.4.0",
    "tensorboard>=2.8.0",
    "nvidia-ml-py3>=7.352.0",
    "deepspeed>=0.9.0",
    # Note: For CUDA 12.4 support, install PyTorch from wheel index:
    # pip install --upgrade --index-url https://download.pytorch.org/whl/cu124 torch torchvision torchaudio
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "torchaudio>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
perf = [
    # Optional but useful for performance optimization
    "packaging>=21.0",
    "ninja>=1.10.0",
    "triton>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/deepscale"
Repository = "https://github.com/yourusername/deepscale"
Issues = "https://github.com/yourusername/deepscale/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
